--- a/example_confs/htmlwritertemplate/css/style.css
+++ b/example_confs/htmlwritertemplate/css/style.css
@@ -1,51 +1,140 @@
-body {
-    background-color: #0000d0;
-    // 6495ed; 
+* {
+margin: 0;
+padding: 0;
+font-family:Arial, Helvetica, sans-serif;
 }
 
+body {
+    background-color: #000;
+    color: #fff0e0;
+}
 
-table.invertervalues {
+/* the header of the page. */
+#header {
+    background-color: #000;
+    color: #afa0e0;
+    text-align:left;
+    font-size:90%;
+    padding: 1em 1em 0em 1em;
+    clear:both;
+}
+
+/* this is the clearfix for the header, so that the floats
+are cleaned. Also paints the line below the header */
+#header:after
+{
+    content: " ";
+    display: block;
+    height: 0;
+    clear: both;
+    padding-top: 0.2em;
+    padding-bottom: 0;
+    margin: 0;
+    border-bottom-width: thin; 
+    border-botom-color:white;
+    border-bottom-style: solid; 
+}
+
+/* solarpowerlog is free software -- to the right please. */
+.FLOSS {
+    float:right;
+    text-align:right;
+    font-size:xx-small; 
+}
+
+/* paragraphs in the header */
+#header p {
+    font-size:75%;
+    margin-left: 1em;
+}
+
+/* main content div */
+#content {
+    background-color: #00001a;
+    padding-top: 1px;
+}
+
+/* the coloumn on the left */
+#leftcolumn {
+    border-right: thin solid #afa0e0;
+    float:left;
+    max-witdh:10%;
+    padding-left:1em;
+    padding-top: 0.5em;
+}
+
+table.bid_table {
     border-width: 0px 0px 0px 0px;
     border-spacing: 0px;
     border-style: none none none none;
     border-color: gray gray gray gray;
     border-collapse: collapse;
+    with:100%;
 }
 
-table.invertervalues th {
+table.bid_table th {
     border: thin dotted black;
    background-color: #483d8b;
    color:white;    
  }
-table.invertervalues td {
-    padding: 1px 1px 1px 1px;
+table.bid_table td {
+    padding: 0 0 0 0.1em;
     border: thin dotted black;
 }
 
-table.invertervalues tr:hover {
-    background-color: darkblue;
+table.bid_table tr:hover {
+    color: yellow;
     padding: 1px 1px 1px 1px;
 }
 
-table.invertervalues tr {
+table.bid_table tr {
    background-color: #6495ed;
    padding: 1px 1px 1px 1px;
    
 }
 
-.basicinverterdata h1 {
-    margin: 0 0 0 0;
-}
-    
-.basicinverterdata h5 {
-    margin: 0 0 0 0;
+.bid_table {
+    width:95%;  
+    align:center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.basicinverterdata h3 {
-     margin: 5px 0 5px 0;
-}   
+.bid_cv {
+    visibility: hidden;
+    height: 5px;
+}
 
+.bid_name 
+{
+    font-size: 120%;
+}
+
+.bid_model {
+    font-size: small;   
+    max-width: 15em;
+}
+   
 .debug {
     visibility: hidden;
     height: 0px;
 }
+
+#csvtimeplot {
+   background-color: #f8f8ff    ;
+   opacity:0.9;
+   height: 450px;
+}
+
+// area for the basic inverter data
+.bid_maindiv {
+ background-color: #f8f8ff;
+ float: left;
+}
+
+// Area for the timeplots. 
+.csvdumper {
+    background-color: #f8f8ff;
+}
+
+
