--- a/example_confs/htmlwritertemplate/snippets/basic_inverter_data.tmpl
+++ b/example_confs/htmlwritertemplate/snippets/basic_inverter_data.tmpl
@@ -12,17 +12,17 @@ inverter. *>
 <TMPL_IF name="Current Grid Feeding Power"><tr><td>Feeding Power</td><td> <TMPL_VAR name="Current Grid Feeding Power"/></td><td>W</td> </tr></TMPL_IF>
 <TMPL_IF name="Inverter Power On Hours"><tr><td>Power-on hours</td><td> <TMPL_VAR name="Inverter Power On Hours"/></td><td>h</td></tr></TMPL_IF>
 <TMPL_IF name="Energy produced this year (kWh)"><tr><td>produced this year</td><td> <TMPL_VAR name="Energy produced this year (kWh)"/> </td><td>kWh</td> </tr></TMPL_IF>
-<TMPL_IF name="Energy produced this month (kWh)"><tr><td>produced this month</td><td> <TMPL_VAR name="Energy produced this month (kWh)"/> </td></td><td>kWh</td> </tr></TMPL_IF>
-<TMPL_IF name="Energy produced today (kWh)"><tr><td>produced today</td><td> <TMPL_VAR name="Energy produced today (kWh)"/> </td></td><td>kWh</td> </tr></TMPL_IF>
-<TMPL_IF name="Energy produced cumulated all time (kWh)"><tr><td>produced all time</td><td> <TMPL_VAR name="Energy produced cumulated all time (kWh)"/> </td></td><td>kWh</td> </tr></TMPL_IF>
-<TMPL_IF name="Installed solar power (Wp)"><tr><td>installed power</td><td> <TMPL_VAR name="Installed solar power (Wp)"/> </td></td><td>Wp</td> </tr></TMPL_IF>
-<TMPL_IF name="Net frequency (Hz)"><tr><td>net frequency</td><td> <TMPL_VAR name="Net frequency (Hz)"/> </td></td><td>W</td> </tr></TMPL_IF>
-<TMPL_IF name="relative Power (%)"><tr><td>rel. power</td><td> <TMPL_VAR name="relative Power (%)"/> </td></td><td>Hz</td> </tr></TMPL_IF>
-<TMPL_IF name="DC voltage in (V)"><tr><td>Panel Voltage</td><td> <TMPL_VAR name="DC voltage in (V)"/> </td></td><td>V</td> </tr></TMPL_IF>
-<TMPL_IF name="DC current in (A)"><tr><td>Panel Current</td><td> <TMPL_VAR name="DC current in (A)"/> </td></td><td>A</td> </tr></TMPL_IF>
-<TMPL_IF name="AC grid voltage (V)"><tr><td>Grid voltage</td><td> <TMPL_VAR name="AC grid voltage (V)"/> </td></td><td>V</td> </tr></TMPL_IF>
-<TMPL_IF name="AC grid feeding current (A)"><tr><td>Grid current</td><td> <TMPL_VAR name="AC grid feeding current (A)"/> </td></td><td>A</td> </tr></TMPL_IF>
-<TMPL_IF name="Inverter Temperature (C)"><tr><td>Inverter Temperature</td><td> <TMPL_VAR name="Inverter Temperature (C)"> </td></td><td>&deg;C</td></tr></TMPL_IF>
+<TMPL_IF name="Energy produced this month (kWh)"><tr><td>produced this month</td><td> <TMPL_VAR name="Energy produced this month (kWh)"/> </td><td>kWh</td> </tr></TMPL_IF>
+<TMPL_IF name="Energy produced today (kWh)"><tr><td>produced today</td><td> <TMPL_VAR name="Energy produced today (kWh)"/> </td><td>kWh</td> </tr></TMPL_IF>
+<TMPL_IF name="Energy produced cumulated all time (kWh)"><tr><td>produced all time</td><td> <TMPL_VAR name="Energy produced cumulated all time (kWh)"/> </td><td>kWh</td> </tr></TMPL_IF>
+<TMPL_IF name="Installed solar power (Wp)"><tr><td>installed power</td><td> <TMPL_VAR name="Installed solar power (Wp)"/> </td><td>Wp</td> </tr></TMPL_IF>
+<TMPL_IF name="Net frequency (Hz)"><tr><td>net frequency</td><td> <TMPL_VAR name="Net frequency (Hz)"/> </td><td>W</td> </tr></TMPL_IF>
+<TMPL_IF name="relative Power (%)"><tr><td>rel. power</td><td> <TMPL_VAR name="relative Power (%)"/> </td><td>Hz</td> </tr></TMPL_IF>
+<TMPL_IF name="DC voltage in (V)"><tr><td>Panel Voltage</td><td> <TMPL_VAR name="DC voltage in (V)"/> </td><td>V</td> </tr></TMPL_IF>
+<TMPL_IF name="DC current in (A)"><tr><td>Panel Current</td><td> <TMPL_VAR name="DC current in (A)"/> </td><td>A</td> </tr></TMPL_IF>
+<TMPL_IF name="AC grid voltage (V)"><tr><td>Grid voltage</td><td> <TMPL_VAR name="AC grid voltage (V)"/> </td><td>V</td> </tr></TMPL_IF>
+<TMPL_IF name="AC grid feeding current (A)"><tr><td>Grid current</td><td> <TMPL_VAR name="AC grid feeding current (A)"/> </td><td>A</td> </tr></TMPL_IF>
+<TMPL_IF name="Inverter Temperature (C)"><tr><td>Inverter Temperature</td><td> <TMPL_VAR name="Inverter Temperature (C)"> </td><td>&deg;C</td></tr></TMPL_IF>
 </table> 
 </div>
  </TMPL_LOOP>
