[EXAMPLE CONF] net frequency is "Hz" not "W"...

--- a/example_confs/htmlwritertemplate/snippets/basic_inverter_data.tmpl
+++ b/example_confs/htmlwritertemplate/snippets/basic_inverter_data.tmpl
@@ -16,8 +16,8 @@ inverter. *>
 <TMPL_IF name="Energy produced today (kWh)"><tr><td>produced today</td><td> <TMPL_VAR name="Energy produced today (kWh)"/> </td><td>kWh</td> </tr></TMPL_IF>
 <TMPL_IF name="Energy produced cumulated all time (kWh)"><tr><td>produced all time</td><td> <TMPL_VAR name="Energy produced cumulated all time (kWh)"/> </td><td>kWh</td> </tr></TMPL_IF>
 <TMPL_IF name="Installed solar power (Wp)"><tr><td>installed power</td><td> <TMPL_VAR name="Installed solar power (Wp)"/> </td><td>Wp</td> </tr></TMPL_IF>
-<TMPL_IF name="Net frequency (Hz)"><tr><td>net frequency</td><td> <TMPL_VAR name="Net frequency (Hz)"/> </td><td>W</td> </tr></TMPL_IF>
-<TMPL_IF name="relative Power (%)"><tr><td>rel. power</td><td> <TMPL_VAR name="relative Power (%)"/> </td><td>Hz</td> </tr></TMPL_IF>
+<TMPL_IF name="Net frequency (Hz)"><tr><td>net frequency</td><td> <TMPL_VAR name="Net frequency (Hz)"/> </td><td>Hz</td> </tr></TMPL_IF>
+<TMPL_IF name="relative Power (%)"><tr><td>rel. power</td><td> <TMPL_VAR name="relative Power (%)"/> </td><td>&#37;</td> </tr></TMPL_IF>
 <TMPL_IF name="DC voltage in (V)"><tr><td>Panel Voltage</td><td> <TMPL_VAR name="DC voltage in (V)"/> </td><td>V</td> </tr></TMPL_IF>
 <TMPL_IF name="DC current in (A)"><tr><td>Panel Current</td><td> <TMPL_VAR name="DC current in (A)"/> </td><td>A</td> </tr></TMPL_IF>
 <TMPL_IF name="AC grid voltage (V)"><tr><td>Grid voltage</td><td> <TMPL_VAR name="AC grid voltage (V)"/> </td><td>V</td> </tr></TMPL_IF>
@@ -26,3 +26,4 @@ inverter. *>
 </table> 
 </div>
  </TMPL_LOOP>
+
