Corrected some spelling errors: charachter character arguement argument Programm Program unkown unknown informations information unkown unknown
Removed some more dh_make template files

--- a/example_confs/htmlwritertemplate/snippets/basic_inverter_data.tmpl
+++ b/example_confs/htmlwritertemplate/snippets/basic_inverter_data.tmpl
@@ -1,6 +1,6 @@
 <* This template snippet writes a small table with showing the values of the 
 inverter. *>
-<!-- Basic Inverter informations -->
+<!-- Basic Inverter information -->
 <TMPL_LOOP name="inverters">
 <div class="bid_maindiv">
 <h1 class="bid_name"><TMPL_VAR name="Inverter Name" /> </h1>
