--- a/example_confs/htmlwritertemplate/test.tmpl
+++ b/example_confs/htmlwritertemplate/test.tmpl
@@ -32,7 +32,7 @@ the "body" tag.*>
     <div id="leftcolumn">
 
         <div id="inverter_basic">
-            <* Emit Basic Inverter informations *>
+            <* Emit Basic Inverter information *>
             <TMPL_INCLUDE name=".../snippets/basic_inverter_data.tmpl">     
         </div>
     </div> 
